@@ -8,7 +8,6 @@
 package com.powsybl.iidm.serde;
 
 import com.google.auto.service.AutoService;
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSortedSet;
 import com.powsybl.commons.extensions.ExtensionSerDe;
@@ -20,6 +19,7 @@ import com.powsybl.iidm.serde.extensions.AbstractVersionableNetworkExtensionSerD
 
 import java.io.InputStream;
 import java.util.List;
+import java.util.Objects;
 
 /**
  * @author Miora Ralambotiana {@literal <miora.ralambotiana at rte-france.com>}
@@ -30,14 +30,19 @@ public class LoadMockSerDe extends AbstractVersionableNetworkExtensionSerDe<Load
     public LoadMockSerDe() {
         super("loadMock", LoadMockExt.class, "lmock",
                 ImmutableMap.<IidmVersion, ImmutableSortedSet<String>>builder()
-                        .put(IidmVersion.V_1_0, ImmutableSortedSet.of("1.0"))
+                        .put(IidmVersion.V_1_0, ImmutableSortedSet.of("0.1", "0.2", "1.0"))
                         .put(IidmVersion.V_1_1, ImmutableSortedSet.of("1.1", "1.2"))
+                        .put(IidmSerDeConstants.CURRENT_IIDM_VERSION, ImmutableSortedSet.of("1.1", "1.2"))
                         .build(),
                 ImmutableMap.<String, String>builder()
+                        .put("0.1", "http://www.powsybl.org/schema/iidm/ext/load_element_mock/1_0")
+                        .put("0.2", "http://www.powsybl.org/schema/iidm/ext/load_element_mock/1_1")
                         .put("1.0", "http://www.powsybl.org/schema/iidm/ext/load_mock/1_0")
                         .put("1.1", "http://www.powsybl.org/schema/iidm/ext/load_mock/1_1")
                         .put("1.2", "http://www.powsybl.org/schema/iidm/ext/load_mock/1_2")
-                        .build());
+                        .build(),
+                List.of(new AlternativeSerializationData("loadElementMock", List.of("0.1")),
+                        new AlternativeSerializationData("loadEltMock", List.of("0.2"), "lem")));
     }
 
     @Override
@@ -47,14 +52,16 @@ public class LoadMockSerDe extends AbstractVersionableNetworkExtensionSerDe<Load
 
     @Override
     public List<InputStream> getXsdAsStreamList() {
-        return ImmutableList.of(getClass().getResourceAsStream("/V1_0/xsd/loadMock_V1_0.xsd"),
-                getClass().getResourceAsStream("/V1_1/xsd/loadMock_V1_1.xsd"),
-                getClass().getResourceAsStream("/V1_1/xsd/loadMock_V1_2.xsd"));
+        return List.of(Objects.requireNonNull(getClass().getResourceAsStream("/V1_0/xsd/loadMock_V0_1.xsd")),
+                Objects.requireNonNull(getClass().getResourceAsStream("/V1_0/xsd/loadMock_V0_2.xsd")),
+                Objects.requireNonNull(getClass().getResourceAsStream("/V1_0/xsd/loadMock_V1_0.xsd")),
+                Objects.requireNonNull(getClass().getResourceAsStream("/V1_1/xsd/loadMock_V1_1.xsd")),
+                Objects.requireNonNull(getClass().getResourceAsStream("/V1_1/xsd/loadMock_V1_2.xsd")));
     }
 
     @Override
     public void write(LoadMockExt extension, SerializerContext context) {
-        // do nothing
+        // empty extension
     }
 
     @Override
